comphelper_lib = shared_library('comphelper',
  'source/compare/AnyCompareFactory.cxx',
  'source/container/IndexedPropertyValuesContainer.cxx',
  'source/container/NamedPropertyValuesContainer.cxx',
  'source/container/container.cxx',
  'source/container/containermultiplexer.cxx',
  'source/container/interfacecontainer2.cxx',
  'source/container/embeddedobjectcontainer.cxx',
  'source/container/enumerablemap.cxx',
  'source/container/enumhelper.cxx',
  'source/container/namecontainer.cxx',
  'source/eventattachermgr/eventattachermgr.cxx',
  'source/misc/accessiblecomponenthelper.cxx',
  'source/misc/accessiblecontexthelper.cxx',
  'source/misc/accessibleeventnotifier.cxx',
  'source/misc/accessiblekeybindinghelper.cxx',
  'source/misc/accessibleselectionhelper.cxx',
  'source/misc/accessibletexthelper.cxx',
  'source/misc/accessiblewrapper.cxx',
  'source/misc/accimplaccess.cxx',
  'source/misc/AccessibleImplementationHelper.cxx',
  'source/misc/anytostring.cxx',
  'source/misc/asyncnotification.cxx',
  'source/misc/asyncquithandler.cxx',
  'source/misc/automationinvokedzone.cxx',
  'source/misc/backupfilehelper.cxx',
  'source/misc/base64.cxx',
  'source/misc/comphelper_module.cxx',
  'source/misc/comphelper_services.cxx',
  'source/misc/componentbase.cxx',
  'source/misc/componentmodule.cxx',
  'source/misc/configuration.cxx',
  'source/misc/configurationhelper.cxx',
  'source/misc/DirectoryHelper.cxx',
  'source/misc/dispatchcommand.cxx',
  'source/misc/docpasswordhelper.cxx',
  'source/misc/docpasswordrequest.cxx',
  'source/misc/documentinfo.cxx',
  'source/misc/evtlistenerhlp.cxx',
  'source/misc/evtmethodhelper.cxx',
  'source/misc/fileurl.cxx',
  'source/misc/getexpandeduri.cxx',
  'source/misc/graphicmimetype.cxx',
  'source/misc/hash.cxx',
  'source/misc/instancelocker.cxx',
  'source/misc/interaction.cxx',
  'source/misc/listenernotification.cxx',
  'source/misc/logging.cxx',
  'source/misc/lok.cxx',
  'source/misc/mimeconfighelper.cxx',
  'source/misc/namedvaluecollection.cxx',
  'source/misc/numberedcollection.cxx',
  'source/misc/numbers.cxx',
  'source/misc/officerestartmanager.cxx',
  'source/misc/profilezone.cxx',
  'source/misc/proxyaggregation.cxx',
  'source/misc/random.cxx',
  'source/misc/SelectionMultiplex.cxx',
  'source/misc/sequenceashashmap.cxx',
  'source/misc/servicedecl.cxx',
  'source/misc/sharedmutex.cxx',
  'source/misc/simplefileaccessinteraction.cxx',
  'source/misc/solarmutex.cxx',
  'source/misc/stillreadwriteinteraction.cxx',
  'source/misc/anycompare.cxx',
  'source/misc/storagehelper.cxx',
  'source/misc/string.cxx',
  'source/misc/synchronousdispatch.cxx',
  'source/misc/syntaxhighlight.cxx',
  'source/misc/threadpool.cxx',
  'source/misc/types.cxx',
  'source/misc/weak.cxx',
  'source/misc/weakeventlistener.cxx',
  'source/misc/xmlsechelper.cxx',
  'source/officeinstdir/officeinstallationdirectories.cxx',
  'source/processfactory/processfactory.cxx',
  'source/property/ChainablePropertySet.cxx',
  'source/property/ChainablePropertySetInfo.cxx',
  'source/property/genericpropertyset.cxx',
  'source/property/MasterPropertySet.cxx',
  'source/property/MasterPropertySetInfo.cxx',
  'source/property/opropertybag.cxx',
  'source/property/propagg.cxx',
  'source/property/propertybag.cxx',
  'source/property/propertycontainer.cxx',
  'source/property/propertycontainerhelper.cxx',
  'source/property/property.cxx',
  'source/property/propertysethelper.cxx',
  'source/property/propertysetinfo.cxx',
  'source/property/propertystatecontainer.cxx',
  'source/property/propmultiplex.cxx',
  'source/property/propstate.cxx',
  'source/streaming/basicio.cxx',
  'source/streaming/memorystream.cxx',
  'source/streaming/oslfile2streamwrap.cxx',
  'source/streaming/seekableinput.cxx',
  'source/streaming/seqinputstreamserv.cxx',
  'source/streaming/seqoutputstreamserv.cxx',
  'source/streaming/seqstream.cxx',
  'source/streaming/streamsection.cxx',
  'source/xml/attributelist.cxx',
  'source/xml/ofopxmlhelper.cxx',
  'source/xml/xmltools.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DCOMPHELPER_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY' ],
  include_directories: [main_inc, 'source/inc'],
  link_with: [cppuhelper_lib, cppu_lib, salhelper_lib, sal_lib, ucbhelper_lib, i18nlangtag_lib],
  dependencies: [openssl_dep, nss_dep, zlib_dep, icuuc_dep],
  gnu_symbol_visibility: 'hidden',
  install: true,
)
